# MiniMT3

./: .gitignore  README.md  deep-research-report.md  environment.yml  pyproject.toml  项目要求.md
app/: app.py
configs/: eval_fixed.yaml  eval_fixed_relative.yaml  infer.yaml  infer_eval.yaml  infer_eval_fast.yaml  infer_eval_probe.yaml  infer_relative.yaml  infer_relative_eos_guard.yaml  infer_v3_1_tie4.yaml  infer_v3_2_tie4.yaml  infer_v3_3_tie4_precision.yaml  infer_v3_tie4.yaml  model.yaml  model_relative.yaml  model_v3_abs2.yaml  model_v3_mt3idx_rel2.yaml  model_v3_tie4.yaml  train.yaml  train_8gpu.yaml  train_8gpu_relative.yaml  train_8gpu_relative_bsz5_eos.yaml  train_8gpu_resume.yaml  train_8gpu_shared.yaml  train_8gpu_v3_10_mt3idx_pitchguard.yaml  train_8gpu_v3_11_abs2_indexed.yaml  train_8gpu_v3_1_tie4.yaml  train_8gpu_v3_2_tie4.yaml  train_8gpu_v3_3_tie4_precision.yaml  train_8gpu_v3_4_tie4_recall.yaml  train_8gpu_v3_5_tie4_aux.yaml  train_8gpu_v3_6_abs2.yaml  train_8gpu_v3_7_abs2_recall.yaml  train_8gpu_v3_8_abs2_min_eos.yaml  train_8gpu_v3_9_mt3idx_rel2.yaml  train_8gpu_v3_9_mt3idx_rel2_copyshift.yaml  train_8gpu_v3_tie4.yaml  train_8gpu_v4_aux_primary.yaml  train_8gpu_v4_aux_primary_b48.yaml  train_amt_v10_hires20_shift.yaml  train_amt_v10_hires20_shift_smoke.yaml  (+58 more)
paper/: README.md  main.bbl  main.tex  references.bib
scripts/: amt_model_report.py  build_amt_hard_manifest.py  build_amt_manifest.py  build_amt_mix_manifest.py  build_eval_manifest.py  build_pitch_calibration.py  build_score_quality_manifest.py  check_fixed_eval.py  eval_amt.py  eval_aux.py  (+32 more)
(+51 files in other folders)
